test/snapshot/negative/profile_removed_idiomatic/compile.hxml
-cp .
-lib reflaxe.go
-D go_output=out
-D reflaxe_go_profile=idiomatic
-main Main
